first version with a few correction already for backup

--- a/WileyASNA-v1.cls
+++ b/WileyASNA-v1.cls
@@ -2251,7 +2251,7 @@ Volume\ \@jvol, Article ID\ \@artid, \thepage~pages\par%
 \vspace*{-0pt}
 }
 
-\bibliographystyle{Wiley-ASNA}%
+\bibliographystyle{flareloci}%
 
 %
 %% Macros for Scheme %%
