--- a/flareloci.bib
+++ b/flareloci.bib
@@ -4682,6 +4682,284 @@ archivePrefix = {arXiv},
 }
 
 
+@ARTICLE{shibayama2013,
+       author = {{Shibayama}, Takuya and {Maehara}, Hiroyuki and {Notsu}, Shota and {Notsu}, Yuta and {Nagao}, Takashi and {Honda}, Satoshi and {Ishii}, Takako T. and {Nogami}, Daisaku and {Shibata}, Kazunari},
+        title = "{Superflares on Solar-type Stars Observed with Kepler. I. Statistical Properties of Superflares}",
+      journal = {\apjs},
+     keywords = {stars: activity, stars: flare, stars: rotation, stars: solar-type, starspots, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = nov,
+       volume = {209},
+       number = {1},
+          eid = {5},
+        pages = {5},
+          doi = {10.1088/0067-0049/209/1/5},
+archivePrefix = {arXiv},
+       eprint = {1308.1480},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJS..209....5S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{moschou2017,
+       author = {{Moschou}, Sofia-Paraskevi and {Drake}, Jeremy J. and {Cohen}, Ofer and {Alvarado-Gomez}, Julian D. and {Garraffo}, Cecilia},
+        title = "{A Monster CME Obscuring a Demon Star Flare}",
+      journal = {\apj},
+     keywords = {binaries: eclipsing, stars: activity, stars: flare, stars: late-type, Sun: coronal mass ejections: CMEs, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = dec,
+       volume = {850},
+       number = {2},
+          eid = {191},
+        pages = {191},
+          doi = {10.3847/1538-4357/aa9520},
+archivePrefix = {arXiv},
+       eprint = {1710.07361},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...850..191M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{lingam2017,
+       author = {{Lingam}, Manasvi and {Loeb}, Abraham},
+        title = "{Risks for Life on Habitable Planets from Superflares of Their Host Stars}",
+      journal = {\apj},
+     keywords = {astrobiology, magnetic reconnection, planets and satellites: physical evolution, planets and satellites: surfaces, stars: flare, Sun: particle emission, Astrophysics - Earth and Planetary Astrophysics, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = oct,
+       volume = {848},
+       number = {1},
+          eid = {41},
+        pages = {41},
+          doi = {10.3847/1538-4357/aa8e96},
+archivePrefix = {arXiv},
+       eprint = {1708.04241},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...848...41L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{loyd2018,
+       author = {{Loyd}, R.~O. Parke and {Shkolnik}, Evgenya L. and {Schneider}, Adam C. and {Barman}, Travis S. and {Meadows}, Victoria S. and {Pagano}, Isabella and {Peacock}, Sarah},
+        title = "{HAZMAT. IV. Flares and Superflares on Young M Stars in the Far Ultraviolet}",
+      journal = {\apj},
+     keywords = {stars: activity, planets and satellites: atmospheres, stars: flare, stars: late-type, stars: evolution, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = nov,
+       volume = {867},
+       number = {1},
+          eid = {70},
+        pages = {70},
+          doi = {10.3847/1538-4357/aae2ae},
+archivePrefix = {arXiv},
+       eprint = {1810.03277},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...867...70L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{stelzer2006,
+       author = {{Stelzer}, B. and {Schmitt}, J.~H.~M.~M. and {Micela}, G. and {Liefke}, C.},
+        title = "{Simultaneous optical and X-ray observations of a giant flare on the ultracool dwarf LP 412-31}",
+      journal = {\aap},
+     keywords = {X-rays: stars, stars: activity, stars: flare, stars: low-mass, brown dwarfs, stars: coronae, stars: individual: LP 412-31, Astrophysics},
+         year = 2006,
+        month = dec,
+       volume = {460},
+       number = {2},
+        pages = {L35-L38},
+          doi = {10.1051/0004-6361:20066488},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0610582},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2006A&A...460L..35S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{walkowicz2011,
+       author = {{Walkowicz}, Lucianne M. and {Basri}, Gibor and {Batalha}, Natalie and {Gilliland}, Ronald L. and {Jenkins}, Jon and {Borucki}, William J. and {Koch}, David and {Caldwell}, Doug and {Dupree}, Andrea K. and {Latham}, David W. and {Meibom}, Soeren and {Howell}, Steve and {Brown}, Timothy M. and {Bryson}, Steve},
+        title = "{White-light Flares on Cool Stars in the Kepler Quarter 1 Data}",
+      journal = {\aj},
+     keywords = {stars: emission-line, Be, stars: flare, stars: low-mass, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2011,
+        month = feb,
+       volume = {141},
+       number = {2},
+          eid = {50},
+        pages = {50},
+          doi = {10.1088/0004-6256/141/2/50},
+archivePrefix = {arXiv},
+       eprint = {1008.0853},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011AJ....141...50W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{getman2005,
+       author = {{Getman}, K.~V. and {Flaccomio}, E. and {Broos}, P.~S. and {Grosso}, N. and {Tsujimoto}, M. and {Townsley}, L. and {Garmire}, G.~P. and {Kastner}, J. and {Li}, J. and {Harnden}, F.~R., Jr. and {Wolk}, S. and {Murray}, S.~S. and {Lada}, C.~J. and {Muench}, A.~A. and {McCaughrean}, M.~J. and {Meeus}, G. and {Damiani}, F. and {Micela}, G. and {Sciortino}, S. and {Bally}, J. and {Hillenbrand}, L.~A. and {Herbst}, W. and {Preibisch}, T. and {Feigelson}, E.~D.},
+        title = "{Chandra Orion Ultradeep Project: Observations and Source Lists}",
+      journal = {\apjs},
+     keywords = {ISM: Individual: Name: Orion Nebula, ISM: Individual: Alphanumeric: OMC-1, Galaxy: Open Clusters and Associations: Individual: Name: Orion, Stars: Early-Type, Stars: Pre-Main-Sequence, X-Rays: Stars, Astrophysics},
+         year = 2005,
+        month = oct,
+       volume = {160},
+       number = {2},
+        pages = {319-352},
+          doi = {10.1086/432092},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0410136},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005ApJS..160..319G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@INPROCEEDINGS{shibata2016,
+       author = {{Shibata}, Kazunari},
+        title = "{Solar and stellar flares and their impact on planets}",
+     keywords = {stars:activity, stars:flare, stars:rotation, stars:solar-type, stars:starspots},
+    booktitle = {Solar and Stellar Flares and their Effects on Planets},
+         year = 2016,
+       editor = {{Kosovichev}, A.~G. and {Hawley}, S.~L. and {Heinzel}, P.},
+       volume = {320},
+        month = jan,
+        pages = {3-24},
+          doi = {10.1017/S1743921316006323},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016IAUS..320....3S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{benz2017,
+       author = {{Benz}, Arnold O.},
+        title = "{Flare Observations}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Reconnection, X-ray emission, Flare radio emission, Particle acceleration, Magnetic energy release},
+         year = 2017,
+        month = dec,
+       volume = {14},
+       number = {1},
+          eid = {2},
+        pages = {2},
+          doi = {10.1007/s41116-016-0004-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017LRSP...14....2B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{ramsay2013,
+       author = {{Ramsay}, Gavin and {Doyle}, J. Gerry and {Hakala}, Pasi and {Garcia-Alvarez}, David and {Brooks}, Adam and {Barclay}, Thomas and {Still}, Martin},
+        title = "{Short-duration high-amplitude flares detected on the M dwarf star KIC 5474065}",
+      journal = {\mnras},
+     keywords = {astrobiology, magnetic reconnection, stars: activity, stars: flare, stars: individual: KIC 5474065, stars: individual: KIC 9726699, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2013,
+        month = sep,
+       volume = {434},
+       number = {3},
+        pages = {2451-2457},
+          doi = {10.1093/mnras/stt1182},
+archivePrefix = {arXiv},
+       eprint = {1306.5938},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.434.2451R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{doyle2018,
+       author = {{Doyle}, L. and {Ramsay}, G. and {Doyle}, J.~G. and {Wu}, K. and {Scullion}, E.},
+        title = "{Investigating the rotational phase of stellar flares on M dwarfs using K2 short cadence data}",
+      journal = {\mnras},
+     keywords = {stars: activity, stars: flare, stars: low-mass, stars: magnetic field, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2018,
+        month = oct,
+       volume = {480},
+       number = {2},
+        pages = {2153-2164},
+          doi = {10.1093/mnras/sty1963},
+archivePrefix = {arXiv},
+       eprint = {1807.08592},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.480.2153D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{reiners2008,
+       author = {{Reiners}, A. and {Basri}, G.},
+        title = "{Chromospheric Activity, Rotation, and Rotational Braking in M and L Dwarfs}",
+      journal = {\apj},
+     keywords = {stars: activity, stars: flare, stars: late-type, stars: low-mass, brown dwarfs, stars: rotation, Astrophysics},
+         year = 2008,
+        month = sep,
+       volume = {684},
+       number = {2},
+        pages = {1390-1403},
+          doi = {10.1086/590073},
+archivePrefix = {arXiv},
+       eprint = {0805.1059},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...684.1390R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{barnes2003,
+       author = {{Barnes}, Sydney A.},
+        title = "{On the Rotational Evolution of Solar- and Late-Type Stars, Its Magnetic Origins, and the Possibility of Stellar Gyrochronology}",
+      journal = {\apj},
+     keywords = {Galaxy: Open Clusters and Associations: General, Stars: Evolution, Stars: Interiors, Stars: Late-Type, Stars: Magnetic Fields, Stars: Rotation, Astrophysics},
+         year = 2003,
+        month = mar,
+       volume = {586},
+       number = {1},
+        pages = {464-479},
+          doi = {10.1086/367639},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0303631},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003ApJ...586..464B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{maehara2021,
+       author = {{Maehara}, Hiroyuki and {Notsu}, Yuta and {Namekata}, Kousuke and {Honda}, Satoshi and {Kowalski}, Adam F. and {Katoh}, Noriyuki and {Ohshima}, Tomohito and {Iida}, Kota and {Oeda}, Motoki and {Murata}, Katsuhiro L. and {Yamanaka}, Masayuki and {Takagi}, Kengo and {Sasada}, Mahito and {Akitaya}, Hiroshi and {Ikuta}, Kai and {Okamoto}, Soshi and {Nogami}, Daisaku and {Shibata}, Kazunari},
+        title = "{Time-resolved spectroscopy and photometry of M dwarf flare star YZ Canis Minoris with OISTER and TESS: Blue asymmetry in the H{\ensuremath{\alpha}} line during the non-white light flare}",
+      journal = {\pasj},
+     keywords = {stars: activity, stars: flare, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = feb,
+       volume = {73},
+       number = {1},
+        pages = {44-65},
+          doi = {10.1093/pasj/psaa098},
+archivePrefix = {arXiv},
+       eprint = {2009.14412},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021PASJ...73...44M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
 @ARTICLE{maehara2020,
        author = {{Maehara}, Hiroyuki and {Notsu}, Yuta and {Namekata}, Kousuke and {Honda}, Satoshi and {Kowalski}, Adam F. and {Katoh}, Noriyuki and {Ohshima}, Tomohito and {Iida}, Kota and {Oeda}, Motoki and {Murata}, Katsuhiro L. and {Yamanaka}, Masayuki and {Takagi}, Kengo and {Sasada}, Mahito and {Akitaya}, Hiroshi and {Ikuta}, Kai and {Okamoto}, Soshi and {Nogami}, Daisaku and {Shibata}, Kazunari},
@@ -5127,6 +5405,102 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@ARTICLE{chen2021,
+       author = {{Chen}, Howard and {Zhan}, Zhuchang and {Youngblood}, Allison and {Wolf}, Eric T. and {Feinstein}, Adina D. and {Horton}, Daniel E.},
+        title = "{Persistence of flare-driven atmospheric chemistry on rocky habitable zone worlds}",
+      journal = {Nature Astronomy},
+     keywords = {Astrophysics - Earth and Planetary Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2021,
+        month = jan,
+       volume = {5},
+        pages = {298-310},
+          doi = {10.1038/s41550-020-01264-1},
+archivePrefix = {arXiv},
+       eprint = {2101.04507},
+ primaryClass = {astro-ph.EP},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021NatAs...5..298C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{xue2005,
+       author = {{Xue}, X.~H. and {Wang}, C.~B. and {Dou}, X.~K.},
+        title = "{An ice-cream cone model for coronal mass ejections}",
+      journal = {Journal of Geophysical Research (Space Physics)},
+     keywords = {Solar Physics, Astrophysics, and Astronomy: Coronal mass ejections (2101), Space Weather: Forecasting (2722), Space Weather: Models, Space Weather: Solar effects, coronal mass ejections, ice-cream cone model},
+         year = 2005,
+        month = aug,
+       volume = {110},
+       number = {A8},
+          eid = {A08103},
+        pages = {A08103},
+          doi = {10.1029/2004JA010698},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2005JGRA..110.8103X},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{xie2004,
+       author = {{Xie}, Hong and {Ofman}, Leon and {Lawrence}, Gareth},
+        title = "{Cone model for halo CMEs: Application to space weather forecasting}",
+      journal = {Journal of Geophysical Research (Space Physics)},
+     keywords = {Solar Physics, Astrophysics, and Astronomy: Coronal mass ejections, Interplanetary Physics: Interplanetary shocks, Interplanetary Physics: Ejecta, driver gases, and magnetic clouds, Ionosphere: Modeling and forecasting, coronal mass ejections, space weather, cone model},
+         year = 2004,
+        month = mar,
+       volume = {109},
+       number = {A3},
+          eid = {A03109},
+        pages = {A03109},
+          doi = {10.1029/2003JA010226},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2004JGRA..109.3109X},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{webb2000,
+       author = {{Webb}, D.~F. and {Cliver}, E.~W. and {Crooker}, N.~U. and {Cry}, O.~C. St. and {Thompson}, B.~J.},
+        title = "{Relationship of halo coronal mass ejections, magnetic clouds, and magnetic storms}",
+      journal = {\jgr},
+     keywords = {Solar Physics, Astrophysics, and Astronomy},
+         year = 2000,
+        month = apr,
+       volume = {105},
+       number = {A4},
+        pages = {7491-7508},
+          doi = {10.1029/1999JA000275},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2000JGR...105.7491W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{fisher1984,
+       author = {{Fisher}, R.~R. and {Munro}, R.~H.},
+        title = "{Coronal transient geometry. I - The flare-associated event of 1981 March 25}",
+      journal = {\apj},
+     keywords = {Coronal Loops, Polarization Characteristics, Solar Flares, Brightness Distribution, Coronagraphs, Density Distribution, Solar Limb, Solar Velocity, Solar Physics},
+         year = 1984,
+        month = may,
+       volume = {280},
+        pages = {428-439},
+          doi = {10.1086/162009},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1984ApJ...280..428F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+@ARTICLE{ilin2021b,
+       author = {{Ilin}, E. and {Poppenh{\"a}ger}, K. and {Schmidt}, S.~J. and {J{\"a}rvinen}, S.~P. and {Newton}, E.~R. and {Alvarado-G{\'o}mez} J.~D. and {Pineda} J.~S. and {Davenport} J.~R.~A. and {Oshagh} M. and {Ilyin} I.},
+        title = "{Giant white-light flares on fully convective stars occur at high
+latitudes}",
+      journal = {in review at \mnras},
+     keywords = {stars: magnetic field -- stars: low-mass -- stars: rotation -- stars: activity -- stars: flare },
+         year = 2021,
+        }
 
 
 
